Addressing sonar issues